Support SortExpression in \record